# bookstore_work

./: db.sqlite3  manage.py  pyproject.toml
bookstorework/: asgi.py  settings.py  urls.py  wsgi.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
order/tests/: factories.py
order/viewsets/: order_viewset.py
product/: urls.py
product/serializers/: __init__.py  category_serializers.py  product_serializers.py
product/tests/: __init__.py  factories.py
product/viewset/: product_viewset.py
